--- a/res_MuSu/5_[NA, c, MFA_NetEdge]/MSC_010208/MuSu_(NA, c, MFA_NetEdge).Rmd
+++ b/res_MuSu/5_[NA, c, MFA_NetEdge]/MSC_010208/MuSu_(NA, c, MFA_NetEdge).Rmd
@@ -97,41 +97,41 @@ As a result, the correlation matrix of each session of each subject will look li
 zmat.path <- "../../../data/zmat"
 subj.num <- substr(subj.name, start = 4, stop = 6) # only works with format like "sub06" or "MSC06"
 #--- plot heatmap
-# hmaplist <- list()
-# hmaplist_i <- 1
-# for(subj.count in 1:length(parcel.list)){
-#   load(paste0(zmat.path,"/sub-MSC",subj.num[subj.count],"_zcube_rcube.RData"))
-#   hmaplist[[subj.count]] <- list()
-#   for(session.count in 1:dim(cubes$rcube)[3]){
-#     # heat map of correlation matrices
-#     hmap.name <- sprintf("sub%s_hmap%s",subj.num[subj.count],session.count)
-#     hmaplist[[subj.count]][session.count] <- superheat(cubes$rcube[,,session.count],
-#                                 membership.cols = parcel.list[[subj.count]]$vox.des$Comm.rcd,
-#                                 membership.rows = parcel.list[[subj.count]]$vox.des$Comm.rcd,
-#                                 clustering.method = NULL,
-#                                 heat.col.scheme = "viridis",
-#                                 left.label.size = 0.08,
-#                                 bottom.label.size = 0.05,
-#                                 y.axis.reverse = TRUE,
-#                                 left.label.col = labelcol[[subj.count]], # order by community name
-#                                 bottom.label.col = labelcol[[subj.count]],
-#                                 left.label.text.size = 3,
-#                                 bottom.label.text.size = 2,
-#                                 left.label.text.col = textcol[[subj.count]],
-#                                 bottom.label.text.col = textcol[[subj.count]],
-#                                 left.label.text.alignment = "left",
-#                                 title = sprintf("Correlation matrix of #%s session",session.count)
-#                                 )
-#   }
-# }
+hmaplist <- list()
+hmaplist_i <- 1
+for(subj.count in 1:length(parcel.list)){
+  load(paste0(zmat.path,"/sub-MSC",subj.num[subj.count],"_zcube_rcube.RData"))
+  hmaplist[[subj.count]] <- list()
+  for(session.count in 1:dim(cubes$rcube)[3]){
+    # heat map of correlation matrices
+    hmap.name <- sprintf("sub%s_hmap%s",subj.num[subj.count],session.count)
+    hmaplist[[subj.count]][[session.count]] <- superheat(cubes$rcube[,,session.count],
+                                membership.cols = parcel.list[[subj.count]]$vox.des$Comm.rcd,
+                                membership.rows = parcel.list[[subj.count]]$vox.des$Comm.rcd,
+                                clustering.method = NULL,
+                                heat.col.scheme = "viridis",
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                y.axis.reverse = TRUE,
+                                left.label.col = labelcol[[subj.count]], # order by community name
+                                bottom.label.col = labelcol[[subj.count]],
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = textcol[[subj.count]],
+                                bottom.label.text.col = textcol[[subj.count]],
+                                left.label.text.alignment = "left",
+                                title = sprintf("Correlation matrix of #%s session",session.count)
+                                )$plot
+  }
+}
 
 ```
 
 ```{r plot_all_sub_session_hmap, echo=F, fig.height=(8*length(subj.name)), fig.width= 40}
-# for(i in 1:length(hmaplist)){
-#   print(sprintf("%s", subj.name[i]))
-#   do.call(grid.arrange, c(hmaplist[[i]], ncol=5))
-# }
+for(i in 1:length(hmaplist)){
+  print(sprintf("%s", subj.name[i]))
+  do.call(grid.arrange, c(hmaplist[[i]], ncol=5))
+}
 ```
 
 This correlation matrix were then turned into a rectangular matrix
@@ -467,7 +467,7 @@ for(i in 1:length(subj.name)){
 heat_fj1 <- list()
 heat_fj2 <- list()
 for(i in 1:length(subj.name)){
-  heat_fj1[i] <- superheat(as.matrix(fj1_sqmat[[i]]), y.axis.reverse = T,
+  heat_fj1[[i]] <- superheat(as.matrix(fj1_sqmat[[i]]), y.axis.reverse = T,
                     membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
                     membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
                     left.label.col = labelcol[[i]],
@@ -482,11 +482,11 @@ for(i in 1:length(subj.name)){
                     bottom.label.text.size = 2,
                     left.label.text.col = textcol[[i]], 
                     bottom.label.text.col = textcol[[i]], 
-                    title=sprintf("%s, dim1",subj.name[i]))
+                    title=sprintf("%s, dim1",subj.name[i]))$plot
   
-  heat_fj2[i] <- superheat(fj2_sqmat[[i]], y.axis.reverse = T,
+   heat_fj2[[i]]  <- superheat(fj2_sqmat[[i]], y.axis.reverse = T,
                     membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
-                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,
                     left.label.col = labelcol[[i]],
                     bottom.label.col = labelcol[[i]],
                     left.label.size = 0.08,
@@ -497,9 +497,9 @@ for(i in 1:length(subj.name)){
                     heat.pal.values = c(0,0.35,0.5,0.65,1),
                     left.label.text.size = 3,
                     bottom.label.text.size = 2,
-                    left.label.text.col = textcol[[i]], 
-                    bottom.label.text.col = textcol[[i]], 
-                    title=sprintf("%s, dim2",subj.name[i]))
+                    left.label.text.col = textcol[[i]],
+                    bottom.label.text.col = textcol[[i]],
+                    title=sprintf("%s, dim2",subj.name[i]))$plot
 }
 
 ```
@@ -524,7 +524,7 @@ for(i in 1:length(subj.name)){
 
 heat_sigfj1 <- list()
 for(i in 1:length(subj.name)){
-  heat_sigfj1[i] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
+  heat_sigfj1[[i]] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
                                 membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
                                 membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
                                 left.label.col = labelcol[[i]],
@@ -539,7 +539,7 @@ for(i in 1:length(subj.name)){
                                 bottom.label.text.size = 2,
                                 left.label.text.col = textcol[[i]], 
                                 bottom.label.text.col = textcol[[i]], 
-                                title=sprintf("%s: significant contribution",subj.name[i]))
+                                title=sprintf("%s: significant contribution",subj.name[i]))$plot
 }
 ```
 
@@ -553,7 +553,7 @@ Smoothed Sig Factor Score (Dim 1)
 #--- the important variables are the ones that contribute more than or equal to the average
 sm_heat_sigfj1 <- list()
 for(i in 1:length(subj.name)){
-sm_heat_sigfj1[i] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
+sm_heat_sigfj1[[i]] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
                               smooth.heat = T, smooth.heat.type = "mean",
                               membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
                               membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
@@ -569,7 +569,7 @@ sm_heat_sigfj1[i] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
                               bottom.label.text.size = 2,
                               left.label.text.col = textcol[[i]], 
                               bottom.label.text.col = textcol[[i]], 
-                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))
+                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))$plot
 }
 
 ```
@@ -588,7 +588,7 @@ for(i in 1:length(subj.name)){
 
 heat_sigfj2 <- list()
 for(i in 1:length(subj.name)){
-  heat_sigfj2[i] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
+  heat_sigfj2[[i]] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
                                 membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
                                 membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
                                 left.label.col = labelcol[[i]],
@@ -603,7 +603,7 @@ for(i in 1:length(subj.name)){
                                 bottom.label.text.size = 2,
                                 left.label.text.col = textcol[[i]], 
                                 bottom.label.text.col = textcol[[i]], 
-                                title=sprintf("%s: significant contribution",subj.name[i]))
+                                title=sprintf("%s: significant contribution",subj.name[i]))$plot
 }
 
 ```
@@ -618,7 +618,7 @@ Smoothed Sig Factor Score (Dim 2)
 #--- the important variables are the ones that contribute more than or equal to the average
 sm_heat_sigfj2 <- list()
 for(i in 1:length(subj.name)){
-sm_heat_sigfj2[i] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
+sm_heat_sigfj2[[i]] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
                               smooth.heat = T, smooth.heat.type = "mean",
                               membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
                               membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
@@ -634,7 +634,7 @@ sm_heat_sigfj2[i] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
                               bottom.label.text.size = 2,
                               left.label.text.col = textcol[[i]], 
                               bottom.label.text.col = textcol[[i]], 
-                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))
+                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))$plot
 }
 ```
 
